{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 58,
  "lineage": "99822d8d-e217-dcb5-f97d-a14020925988",
  "resources": [
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "tenant_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a",
            "metadata": [
              {
                "generation": 0,
                "name": "tenant-a",
                "resource_version": "834",
                "uid": "82c914b1-62e5-4ef4-86ed-a9dc57af91fb"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_namespace",
      "name": "tenant_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b",
            "metadata": [
              {
                "generation": 0,
                "name": "tenant-b",
                "resource_version": "835",
                "uid": "1c67cd25-f299-4c10-9776-b8d965629160"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "tenant_a_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a/allow-internal",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-internal",
                "namespace": "tenant-a",
                "resource_version": "1188",
                "uid": "7ba285e3-af97-4e82-8f41-092142af30d1"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "tenant_a_default_deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tenant-a/default-deny",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny",
                "namespace": "tenant-a",
                "resource_version": "1185",
                "uid": "2052f8b6-db81-46f7-a04f-65ed84861add"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "tenant_b_allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b/allow-internal",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "allow-internal",
                "namespace": "tenant-b",
                "resource_version": "1186",
                "uid": "68543b53-afc0-45fd-885e-17deeda130a5"
              }
            ],
            "spec": [
              {
                "egress": [
                  {
                    "ports": [],
                    "to": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ]
                  }
                ],
                "ingress": [
                  {
                    "from": [
                      {
                        "ip_block": [],
                        "namespace_selector": [],
                        "pod_selector": [
                          {
                            "match_expressions": [],
                            "match_labels": null
                          }
                        ]
                      }
                    ],
                    "ports": []
                  }
                ],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "kubernetes_network_policy",
      "name": "tenant_b_default_deny",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "tenant-b/default-deny",
            "metadata": [
              {
                "annotations": {},
                "generate_name": "",
                "generation": 1,
                "labels": {},
                "name": "default-deny",
                "namespace": "tenant-b",
                "resource_version": "1187",
                "uid": "356d9d90-8fb4-4ce1-9a82-4fe7393eb37b"
              }
            ],
            "spec": [
              {
                "egress": [],
                "ingress": [],
                "pod_selector": [
                  {
                    "match_expressions": [],
                    "match_labels": null
                  }
                ],
                "policy_types": [
                  "Ingress",
                  "Egress"
                ]
              }
            ]
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    }
  ]
}